<resources>
    <string name="app_name">Help</string>
    <string name="help_main_location_notification">Location Notifications</string>
    <string name="help_main_sound">Sound alarm</string>
    <string name="set_phone_number">Set phone number</string>
    <string name="settings_phone_info">Send to your closest relative a message with your location upon activation of location messages. If we detect you have changed your location since the last message, will send a new message with the updated location. \\nSelect a phone number that can receive text messages and is available at any time. This number can be changed at any time.</string>
    <string name="help_sound_alarm">Sound alarm</string>
    <string name="help_location">Location</string>
    <string name="time_between_messages">Time between messages</string>
    <string name="five_minutes">5 minutes</string>
    <string name="ten_minutes">10 minutes</string>
    <string name="fifteen_minutes">15 minutes</string>
    <string name="twenty_minutes">20 minutes</string>
    <string name="tirthy_minutes">30 minutes</string>
    <string name="fortyfive_minutes">45 minutes</string>
    <string name="sixty_minutes">60 minutes</string>
    <string name="ninety_minutes">90 minutes</string>
    <string name="settings">Settings</string>
    <string name="not_all_permissions_set">Some permissions have not been granted. Without them Help will not be able to provide full functionality.</string>
    <string name="fix">Fix</string>
    <string name="select_contact">Select contact</string>
    <string name="phone_number_hint">e.g. +1 555-123-4567</string>
    <string name="ignore">Ignore</string>
    <string name="active">Active</string>
    <string name="inactive">Inactive</string>
    <string name="permission_required_title">Permissions Required</string>
    <string name="permission_explanation_sms">SMS permission is used to send messages to your emergency contacts when you trigger an alarm or location update.</string>
    <string name="permission_explanation_location">Location permission is needed to find your coordinates so they can be included in the emergency messages.</string>
    <string name="open_settings">Open Settings</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="onboarding_title">Welcome to Help</string>
    <string name="onboarding_description">Choose a trusted contact who will receive an SMS with your location whenever you trigger an alarm. You can change this later in Settings.</string>
    <string name="get_started">Get started</string>
    <string name="skip">Skip for now</string>
    <string name="phone_number_required">Select a contact or enter a phone number to continue</string>
    <string name="contact_required_banner_message">Set a contact to receive your location in case of an emergency.</string>
    <string name="set_contact">Set contact</string>
</resources>
